# minGPT

./: demo_multiply.ipynb  pyproject.toml  setup.py  show_training.ipynb  show_training_Adder.ipynb  show_training_char.ipynb
mingpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mingpt2/: model.py  trainer.py
mingpt_distance_embedding/: bpe.py  model.py  trainer.py
mingpt_memory/: bpe.py  model.py  trainer.py
projects/adder/: adder.py
projects/chargpt/: chargpt.py
projects/multiplier/: multiplier.py
