[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mingpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "torch>=2.9.1",
]

[tool.setuptools.packages.find]
include = ["mingpt*", "mingpt*.*","mingpt_distance_embedding*", "mingpt_distance_embedding*.*"]
